--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 // Les variables sont importées depuis notre partial :
 @import "buttons";
 @import "variables";
+@import "mixins";
+@import "media";
 
 body {
   font-family: $font-family;
@@ -12,8 +14,14 @@ body {
 }
 
 .card {
+  box-sizing: border-box;
+  @include responsive(xs) {
+    background: red;
+  }
+  @include responsive(xl) {
+    background: orange;
+  }
   width: 500px;
-  height: 300px;
   border: 1px solid #ccc;
   background: white;
   border-radius: 30px;
@@ -24,9 +32,15 @@ body {
     border-bottom: 1px solid $gray;
     span {
       color: green;
+      @include responsive(xs) {
+        color: red;
+      }
     }
   }
   .text {
     color: #333;
+  }
+  ul {
+    @include inline-list;
   }
 }
